# Axon

./: .gitignore  config.json  main.py  pyproject.toml  test_websocket.py
backend/: .gitignore  app.py  pyproject.toml
backend/mcp_client/: main.py
backend/mcp_client/config/: __init__.py  settings.py
backend/mcp_client/core/: __init__.py  chat_orchestrator.py  client.py  stream.py  tooling.py
backend/mcp_client/llm/: __init__.py  base.py  openai_provider.py
backend/mcp_client/rag/: retrieve_tools.py  set_vector_db.py
backend/mcp_client/tools/: custom_tools.py  registry.py
backend/mcp_client/utils/: __init__.py  logging.py
backend/mcp_client_basics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/rag/: retrieve_tools.py
backend/tools/: custom_tools.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  vite.config.js
frontend/docs/: ARCHITECTURE.md
frontend/src/: App.css  App.jsx  index.css
frontend/src-tauri/: tauri.conf.json
frontend/src/components/: ChatWindow.jsx  ContextMenu.jsx  LeftNavigator.jsx  Modal.jsx
frontend/src/components/ai-elements/: ReasoningPart.jsx  (+15 more)
frontend/src/hooks/: useConversations.js  useIframeListener.js
frontend/src/pages/: ChatPage.jsx  LibraryPage.jsx  NotFoundPage.jsx  SettingsPage.jsx
frontend/src/router/: routes.jsx
frontend/src/services/: apiClient.js  chatService.js  websocketService.js  wsClient.js
frontend/src/state/: AppStateContext.jsx  useChatState.js
frontend/src/utils/: formatters.js
rag/: retrieve_tools.py  set_vector_db.py
(+9 files in other folders)
